<resources>
    <string name="app_name" translatable="false">InciForma</string>
    <string name="txtBtnAdd">Adicionar Incidente</string>

    <string name="txtSearch">Procurar por um lugar…</string>

    <string name="txtCriarInci">Criar Marcador</string>
    <string name="txtEditarInci">Editar Marcador</string>
    <string name="txtSalvarInci">Salvar Marcador</string>

    <string name="txtEndereço">Endereço</string>
    <string name="txtBairro">Bairro</string>
    <string name="txtDesc">Breve descrição…</string>
    <string name="descTipoInci">Tipo de Incidente</string>

    <string name="descAbout">Ícone de Ajuda</string>
    <string name="descUser">Ícone de Usuário</string>
    <string name="descX">Ícone de Fechar</string>
    <string name="descConfig">Ícone de Configuração</string>
    <string name="descSearch">Ícone de Busca</string>
    <string name="descRefresh">Ícone de Recarga</string>
    <string name="descDownVote">Ícone de Voto Negativo</string>
    <string name="descUpVote">Ícone de Voto Positivo</string>

    <string name="descBtnCriarInci">Botão Criar Marcador</string>

    <string name="plcHldNomeInci">[Tipo de Incidente]</string>
    <string name="plcHldEnderecoInci">[Endereço do Incidente]</string>
    <string name="plcHldDescInci">[Descrição do Incidente]</string>
    <string name="plcHldDataInci">[Data do Incidente]</string>

    <string name="txtEditar">Editar</string>
    <string name="txtExcluir">Excluir</string>

    <string name="txtEmail">Email</string>
    <string name="txtSenha">Senha</string>
    <string name="txtEntrar">Entrar</string>
    <string name="txtCriar">Criar Conta</string>

    <string name="txtQuestReg">Já tem uma conta?</string>
    <string name="txtTitleReg">Criando uma conta</string>

    <string name="txtQuestLog">Ainda não tem conta?</string>
    <string name="txtTitleLog">Entrando em uma conta</string>
    <string name="txtEsqSenha">Esqueci minha senha</string>
    <string name="txtGBtn">Entrar com conta Google</string>

    <string name="txtTitleModal">Usuário Ativo:</string>
    <string name="txtAltImgUser">Imagem de Perfil da Conta do Usuário</string>
    <string name="plcHldUserName">[Nome do Usuário]</string>
    <string name="plcHldUserEmail">[Email do Usuário]</string>
    <string name="txtBtnDltAccount">Apagar Conta</string>
    <string name="txtSair">Sair</string>
    <string name="txtUID" translatable="false">UID:</string>
    <string name="plcHldUserUID">[Unique ID do Usuário]</string>
    <string name="txtVerify">Reenviar Verificação</string>

    <string name="txtTitleDltConta">EXCLUINDO CONTA</string>
    <string name="txtMessageDltConta">Você está prestes a excluir a conta ativa neste dispositvo. Tem certeza disso?</string>

    <string name="txtAlertSenha">Insira o email da conta que deseja redefinir a senha:</string>
    <string name="txtEnviar">Enviar</string>

    <string name="txtTitleConfig">Realize a autenticação antes de alterar algo na conta.</string>
    <string name="txtAutenticar">Autenticar</string>
    <string name="txtAltEmail">Alterar Email</string>
    <string name="txtNewEmail">Novo Email</string>
    <string name="txtSaveEmail">Salvar Email</string>
    <string name="txtAltSenha">Alterar Senha</string>
    <string name="txtNewSenha">Nova Senha</string>
    <string name="txtSaveSenha">Salvar Senha</string>

    <string name="txtZero">0</string>

    <string-array name="tipoInci">
        <item>Acidente Veicular</item>
        <item>Agressão</item>
        <item>Explosão</item>
        <item>Morte</item>
        <item>Roubo</item>
        <item>Tiroteio</item>
        <item>Outro</item>
    </string-array>

    <string name="webClientId" translatable="false">476836883143-nekic7famq3hov4j74o0i80f90j86a1a.apps.googleusercontent.com</string>
</resources>