<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/txtTitleConfig"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/plcHldUserEmail"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUserEmail"
            android:layout_marginBottom="8dp"
            android:autofillHints="password"
            android:hint="@string/txtSenha"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnAutenticar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtSenha"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="24dp"
            android:text="@string/txtAutenticar" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ChangeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/txtAltEmail"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNewEmail"
            android:layout_marginBottom="8dp"
            android:autofillHints="emailAddress"
            android:hint="@string/txtNewEmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnNewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtNewEmail"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="24dp"
            android:text="@string/txtSaveEmail" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ChangeSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtNewSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/txtAltSenha"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNewSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNewSenha"
            android:layout_marginBottom="8dp"
            android:autofillHints="password"
            android:hint="@string/txtNewSenha"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnNewSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtNewSenha"
            android:layout_alignParentRight="true"
            android:text="@string/txtSaveSenha" />
    </RelativeLayout>

</LinearLayout>