<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert"
    android:orientation="vertical"
    android:padding="24dp">

    <RelativeLayout
        android:id="@+id/txtTitleAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/inciType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/plcHldNomeInci"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnClose"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/descX"
            app:icon="@drawable/ic_cross"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:id="@+id/inciAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitleAlert"
        android:layout_marginBottom="8dp"
        android:text="@string/plcHldEnderecoInci"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/inciDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inciAddress"
        android:layout_marginBottom="8dp"
        android:text="@string/plcHldDescInci"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/inciDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inciDesc"
        android:layout_marginBottom="16dp"
        android:text="@string/plcHldDataInci"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnDltInci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inciDate"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:text="@string/txtExcluir"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnEdtInci"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inciDate"
        android:layout_toLeftOf="@id/btnDltInci"
        android:text="@string/txtEditar"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inciDate">

        <Button
            android:id="@+id/btnDownVote"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descDownVote"
            android:enabled="false"
            app:icon="@drawable/ic_down" />

        <TextView
            android:id="@+id/inciRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="8dp"
            android:layout_toRightOf="@id/btnDownVote"
            android:text="@string/txtZero"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnUpVote"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/inciRate"
            android:contentDescription="@string/descUpVote"
            android:enabled="false"
            app:icon="@drawable/ic_up" />

    </RelativeLayout>

</RelativeLayout>