<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert"
    android:orientation="vertical"
    android:padding="24dp">

    <Button
        android:id="@+id/btnClose"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/descX"
        app:icon="@drawable/ic_cross" />

    <TextView
        android:id="@+id/txtTitleAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnClose"
        android:layout_marginBottom="16dp"
        android:text="@string/txtAlertSenha"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitleAlert"
        android:layout_marginBottom="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmail"
        android:layout_alignParentRight="true"
        android:text="@string/txtEnviar" />

</RelativeLayout>