<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert"
    android:orientation="vertical"
    android:padding="24dp">

    <RelativeLayout
        android:id="@+id/txtTitleAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/btnClose"
            android:text="@string/txtTitleDltConta"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnClose"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/descX"
            app:icon="@drawable/ic_cross" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtMessageAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitleAlert"
        android:layout_marginVertical="16dp"
        android:text="@string/txtMessageDltConta"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnDltAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMessageAlert"
        android:layout_alignParentRight="true"
        android:backgroundTint="@color/dangerColor"
        android:text="@string/txtBtnDltAccount"
        android:textColor="@color/dangerTextColor" />

</RelativeLayout>