<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

            <Button
                style="@style/Widget.Material3.Button.IconButton"
                android:id="@+id/btnAbout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:contentDescription="@string/descAbout"
                app:icon="@drawable/ic_about"
                app:iconGravity="textStart" />

            <Button
                style="@style/Widget.Material3.Button.IconButton"
                android:id="@+id/btnUser"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/descUser"
                app:icon="@drawable/ic_user"
                app:iconGravity="textEnd" />
    </com.google.android.material.appbar.MaterialToolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="FragmentTagUsage" />

        <Button
            android:id="@+id/btnInci"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/txtBtnAdd"
            app:icon="@drawable/ic_add"
            app:iconGravity="textStart"
            tools:ignore="TextContrastCheck" />
    </FrameLayout>
</LinearLayout>